2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/pcre: Update to PCRE 7.8

2009-01-17  Matthias Clasen  <mclasen@redhat.com>

	Bug 567977 – textdomain() macro should not return NULL when 
	ENABLE_NLS is not set

	* glib/glibintl.h: If !ENABLE_NLS, make textomain() macro 
	return "messages" in case of a NULL argument. Patch by
	Peter Kjellerstedt.

2009-01-17  Matthias Clasen  <mclasen@redhat.com>

	Bug 567838 – G_STRUCT_OFFSETOF fails to compile under icc 9.1

	* glib/gmacros.h (G_STRUCT_OFFSETOF): Use offsetof instead of 
	__builtin_offsetof, for icc's sake. Proposed by Hrvoje Niksic.

2009-01-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 564728 Add function to decode base64 encoded data in place

	* glib/glib.symbols:
	* glib/gbase64.[hc] (g_base64_decode_inplace): New convenience
	API to decode in place, overwriting the input string. Patch by
	Sebastian Dröge.

2009-01-12  Matthias Clasen  <mclasen@redhat.com>
	
	* glib/gtestutils.c (g_strcmp0): Be more explicit about the NULL
	handling in the docs.

2009-01-12  Tor Lillqvist  <tml@novell.com>

	* glib/goption.c (parse_arg): Guard against a mis-written
	GOptionArgFunc that has returned FALSE but not set the GError.

2009-01-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 566573 – g_match_info_fetch_pos docs

	* glib/gregex.c: Mention that positions are in bytes. 
	Proposed by Christian Persch.

2009-01-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 566569 – gregex docs clarification

	* glib/gregex.c: Copy the warning about @string to all
	relevant docs. Proposed by Christian Persch

2009-01-09  Tor Lillqvist  <tml@iki.fi>

	Bug 567138 - get_package_directory_from_module() does not free its
	lock when failing

	* glib/gwin32.c (get_package_directory_from_module): Obvious fix.

2009-01-05  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-01-05  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.4 ===

	* NEWS: Updates

2009-01-05  Dan Winship  <danw@gnome.org>
